src/libqgraphicseffect.h

typedef QMetaObject::Connection QMetaObject__Connection;
typedef struct QColor QColor;
typedef struct QGraphicsBlurEffect QGraphicsBlurEffect;
typedef struct QGraphicsColorizeEffect QGraphicsColorizeEffect;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QRectF QRectF;
typedef QGraphicsBlurEffect::BlurHints BlurHints;     // C++ QFlags
typedef int BlurHints;     // C ABI QFlags
QRectF* QGraphicsEffect_BoundingRect(const QGraphicsEffect* self);
bool QGraphicsEffect_IsEnabled(const QGraphicsEffect* self);
void QGraphicsEffect_SetEnabled(QGraphicsEffect* self, bool enable);
void QGraphicsEffect_Update(QGraphicsEffect* self);
QGraphicsColorizeEffect* QGraphicsColorizeEffect_new();
QGraphicsColorizeEffect* QGraphicsColorizeEffect_new2(QObject* parent);
QMetaObject* QGraphicsColorizeEffect_MetaObject(const QGraphicsColorizeEffect* self);
void* QGraphicsColorizeEffect_Metacast(QGraphicsColorizeEffect* self, const char* param1);
int QGraphicsColorizeEffect_Metacall(QGraphicsColorizeEffect* self, int param1, int param2, void** param3);
libqt_string QGraphicsColorizeEffect_Tr(const char* s);
QColor* QGraphicsColorizeEffect_Color(const QGraphicsColorizeEffect* self);
double QGraphicsColorizeEffect_Strength(const QGraphicsColorizeEffect* self);
void QGraphicsColorizeEffect_SetColor(QGraphicsColorizeEffect* self, QColor* c);
void QGraphicsColorizeEffect_SetStrength(QGraphicsColorizeEffect* self, double strength);
void QGraphicsColorizeEffect_Connect_ColorChanged(QGraphicsColorizeEffect* self, intptr_t slot);
void QGraphicsColorizeEffect_Connect_StrengthChanged(QGraphicsColorizeEffect* self, intptr_t slot);
void QGraphicsColorizeEffect_Draw(QGraphicsColorizeEffect* self, QPainter* painter);
libqt_string QGraphicsColorizeEffect_Tr2(const char* s, const char* c);
libqt_string QGraphicsColorizeEffect_Tr3(const char* s, const char* c, int n);
void QGraphicsColorizeEffect_Delete(QGraphicsColorizeEffect* self);
QGraphicsBlurEffect* QGraphicsBlurEffect_new();
QMetaObject* QGraphicsBlurEffect_MetaObject(const QGraphicsBlurEffect* self);
void* QGraphicsBlurEffect_Metacast(QGraphicsBlurEffect* self, const char* param1);
int QGraphicsBlurEffect_Metacall(QGraphicsBlurEffect* self, int param1, int param2, void** param3);
libqt_string QGraphicsBlurEffect_Tr(const char* s);
QRectF* QGraphicsBlurEffect_BoundingRectFor(const QGraphicsBlurEffect* self, QRectF* rect);
double QGraphicsBlurEffect_BlurRadius(const QGraphicsBlurEffect* self);
int QGraphicsBlurEffect_BlurHints(const QGraphicsBlurEffect* self);
void QGraphicsBlurEffect_SetBlurRadius(QGraphicsBlurEffect* self, double blurRadius);
void QGraphicsBlurEffect_SetBlurHints(QGraphicsBlurEffect* self, int hints);
void QGraphicsBlurEffect_Draw(QGraphicsBlurEffect* self, QPainter* painter);
libqt_string QGraphicsBlurEffect_Tr2(const char* s, const char* c);
libqt_string QGraphicsBlurEffect_Tr3(const char* s, const char* c, int n);
void QGraphicsBlurEffect_Delete(QGraphicsBlurEffect* self);